<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TextView
        style="@style/KievRentTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="15dp"
        android:lineSpacingExtra="10sp"
        android:shadowColor="#7FA40E"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="25"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />

    <Button
        android:id="@+id/ButtonCalendar"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonCalendar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonCheck"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonCheck"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonPause"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonPause"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonList"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonList"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonContacts"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonContacts"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonManagers"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonManagers"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonAbout"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonAbout"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center"
        android:clickable="false"
        android:gravity="bottom"
        android:text="@string/copyright"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>