<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        style="@style/KievRentTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="10dp"
        android:lineSpacingExtra="10sp"
        android:shadowColor="#7FA40E"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="25"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />

    <EditText
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:background="#B7EF8E"
        android:gravity="center"
        android:hint="@string/tvName"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:background="#B7EF8E"
        android:gravity="center"
        android:inputType="phone"
        android:text="@string/tvPhone"
        android:textColor="@android:color/black"
        tools:ignore="LabelFor" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:divider="@android:color/black"
        android:dividerHeight="2dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true" />

    <Button
        android:id="@+id/ButtonNew"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonNew"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonAdd"
        style="@style/KievRentThemeButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/ButtonAdd"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>